--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 ✔ Proyecto 1
-✔ Proyecto 2
-☐ Proyecto 3 -> Faltan comentarios y jquery
-☐ Proyecto 4 -> Faltan comentarios y jquery
-☐ Proyecto 5 -> Faltan comentarios y jquery
+☐ Proyecto 2 -> Falta jquery
+☐ Proyecto 3 -> Falta jquery
+☐ Proyecto 4 -> Falta funcionalidad, comentarios y jquery
+☐ Proyecto 5 -> Falta jquery
 ☐ Proyecto 6 y 7 -> Faltan comentarios y jquery
 ☐ Proyecto 8 -> Falta todo
 ☐ Proyecto 9 y 10 -> Falta Todo
