--- a/TODO
+++ b/TODO
@@ -1,8 +1,13 @@
 ✔ Proyecto 1
-☐ Proyecto 2 -> Falta jquery
-☐ Proyecto 3 -> Falta jquery
+✔ Proyecto 2
+✔ Proyecto 3
 ☐ Proyecto 4 -> Falta funcionalidad, comentarios y jquery
-☐ Proyecto 5 -> Falta jquery
-☐ Proyecto 6 y 7 -> Faltan comentarios y jquery
+✔ Proyecto 5
+✔ Proyecto 6 y 7
 ☐ Proyecto 8 -> Falta todo
+    ☐ Proyecto 2
+    ☐ Proyecto 3
+    ☐ Proyecto 4
+    ☐ Proyecto 5
+    ☐ Proyecto 6 y 7
 ☐ Proyecto 9 y 10 -> Falta Todo
