--- a/TODO
+++ b/TODO
@@ -1,13 +1,13 @@
 ✔ Proyecto 1
 ✔ Proyecto 2
 ✔ Proyecto 3
-☐ Proyecto 4 -> Falta funcionalidad, comentarios y jquery
+✔ Proyecto 4
 ✔ Proyecto 5
 ✔ Proyecto 6 y 7
-☐ Proyecto 8 -> Falta todo
+☐ Proyecto 8
     ☐ Proyecto 2
     ☐ Proyecto 3
     ☐ Proyecto 4
     ☐ Proyecto 5
     ☐ Proyecto 6 y 7
-☐ Proyecto 9 y 10 -> Falta Todo
+☐ Proyecto 9 y 10
